Fix form layout bug

--- a/src/flip-card.scss
+++ b/src/flip-card.scss
@@ -43,8 +43,11 @@
         }
 
         .card-back {
-            display: none;
+            visibility: hidden;
             transform: none;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
     }
 
@@ -56,7 +59,8 @@
         }
 
         .card-back {
-            display: block;
+            position: relative;
+            visibility: visible;
         }
     }
 }
