--- a/src/form.scss
+++ b/src/form.scss
@@ -74,6 +74,7 @@
         background-color: white;
         user-select: none;
         border-radius: 3px;
+        height: 150px;
     }
 }
 
